--- a/src/PMBPI/MainFrame.form
+++ b/src/PMBPI/MainFrame.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="652" height="463"/>
+      <xy x="20" y="20" width="652" height="498"/>
     </constraints>
     <properties/>
     <border type="none" title="Frame"/>
@@ -13,7 +13,7 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="100" height="120"/>
-            <preferred-size width="400" height="152"/>
+            <preferred-size width="400" height="160"/>
           </grid>
         </constraints>
         <properties/>
@@ -39,7 +39,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="15b61" binding="voiceStatusLabel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="15b61" binding="voiceStatusLabel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -55,7 +55,15 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Label"/>
+                      <text value="Нажмите пробел для начала записи голоса"/>
+                    </properties>
+                  </component>
+                  <component id="a2688" class="javax.swing.JButton" binding="recordingBtn">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="запись"/>
                     </properties>
                   </component>
                 </children>
@@ -194,7 +202,7 @@
                               <text value="Имя:"/>
                             </properties>
                           </component>
-                          <component id="f31b3" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+                          <component id="f31b3" class="javax.swing.JTextField" binding="personNameField">
                             <constraints>
                               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                 <minimum-size width="100" height="-1"/>
