--- a/src/PMBPI/MainFrame.form
+++ b/src/PMBPI/MainFrame.form
@@ -3,10 +3,10 @@
   <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="652" height="498"/>
+      <xy x="20" y="20" width="652" height="518"/>
     </constraints>
     <properties/>
-    <border type="none" title="Frame"/>
+    <border type="none" title="Программа многофакторной биометрической идентификации"/>
     <children>
       <grid id="f15a7" binding="topPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
@@ -47,7 +47,9 @@
                     <preferred-size width="60" height="10"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <font style="1"/>
+                </properties>
                 <border type="none"/>
                 <children>
                   <component id="35814" class="javax.swing.JLabel" binding="voiceCaptureLabel">
@@ -55,7 +57,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Нажмите пробел для начала записи голоса"/>
+                      <text value="Ожидание начала записи"/>
                     </properties>
                   </component>
                   <component id="a2688" class="javax.swing.JButton" binding="recordingBtn">
@@ -107,21 +109,10 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <grid id="7f44b" binding="IdentifiedFacePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                    <margin top="0" left="0" bottom="0" right="0"/>
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <minimum-size width="-1" height="120"/>
-                      </grid>
-                    </constraints>
-                    <properties/>
-                    <border type="none" title="Результат идентификации"/>
-                    <children/>
-                  </grid>
                   <grid id="1f607" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                         <maximum-size width="-1" height="30"/>
                       </grid>
                     </constraints>
@@ -157,13 +148,30 @@
                   <grid id="5e187" binding="selectedDataPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                         <minimum-size width="-1" height="120"/>
                       </grid>
                     </constraints>
                     <properties/>
-                    <border type="none" title="Выбранные данные"/>
+                    <border type="line" title="Выбранные данные"/>
                     <children/>
+                  </grid>
+                  <grid id="7f44b" binding="IdentifiedFacePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <minimum-size width="-1" height="120"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                    <border type="none" title="Результат идентификации"/>
+                    <children>
+                      <hspacer id="73ffa">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </hspacer>
+                    </children>
                   </grid>
                 </children>
               </grid>
