--- a/src/PMBPI/MainFrame.form
+++ b/src/PMBPI/MainFrame.form
@@ -98,7 +98,9 @@
                 <preferred-size width="200" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <toolTipText value="Кликните на изображении для удаления человека из выборки"/>
+            </properties>
             <border type="none"/>
             <children>
               <grid id="a83bd" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
